# prod_simulation_platform

./: .gitignore  README.md  docker-compose.yml
fastapi-backend/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
fastapi-backend/models/: log_model.py
fastapi-backend/routers/: health.py
fastapi-backend/services/: elasticsearch_service.py
